--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driverClassName=org.postgresql.Driver
